--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-xhr-backend": "^3.2.2",
+    "moment": "2.23.0",
+    "moment-timezone": "^0.5.23",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.16.9",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "i18next-scanner": "^2.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i-scanner": "i18next-scanner --config config/i18next-scanner.config.js 'src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
